--- a/town_hall/ch02/javascript_jquery.html
+++ b/town_hall/ch02/javascript_jquery.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>JavaScript and jQuery (4th Edition)</h1>
- 	    <img src="javascript_jquery.jpg" alt="JavaScript and jQuery Book">
+ 	    <img src="javascript_jquery.jpg" alt="JavaScript and jQuery Book"
         <p>Today, JavaScript is used on most of the pages of a modern 
             website, from small individual sites to the largest commercial 
             sites. And wherever JavaScript is used, you’ll also find jQuery. 
@@ -16,5 +16,6 @@
         <p>Now, this one book will help you master all of the JavaScript and 
             jQuery skills that every web developer should have. To find out 
             how, <a href="">read more...</a></p>
+        <p id="service">For customer service, call us from 8am to 5pm at 1-555-555-5555.</p>
      </body>
 </html>
