--- a/town-hall-RogerA-cpu-main/town_hall/speakers/c06x_brancaccio.html
+++ b/town-hall-RogerA-cpu-main/town_hall/speakers/c06x_brancaccio.html
@@ -20,13 +20,19 @@
 			<article>
 				<img src="../images/brancaccio_EEC.jpg" alt="David Brancaccio on Econ Extra Credit">
 				<p>
-					David A. Brancaccio is an American radio and television journalist. He is the host of the 
-					public radio business program Marketplace Morning Report and the PBS newsmagazine Now.
+					David A. Brancaccio is an American 
+					radio and television journalist. He is the 
+					host of the public radio business 
+					program Marketplace Morning Report 
+					and the PBS newsmagazine Now.
 				</p>
 				<p>
-					He began his career in broadcasting on WTVL radio in 1976 at the age of fifteen. He received 
-					a Bachelor of Arts in African Studies and History from Wesleyan University in 1982 and a master's 
-					in journalism from Stanford University in 1988. He traveled widely, spending his fourth grade in 
+					He began his career in broadcasting on 
+					WTVL radio in 1976 at the age of 
+					fifteen. He received a Bachelor of Arts 
+					in African Studies and History from 
+					Wesleyan University in 1982 and a 
+					master's in journalism from Stanford University in 1988. He traveled widely, spending his fourth grade in 
 					Rome, his ninth grade in Fort Dauphin, Madagascar and his senior year in college in Legon, Ghana.
 				</p>
 				<p>
@@ -34,20 +40,33 @@
 					named as the program's European editor based in London. Brancaccio became senior editor and host
 					of Marketplace in 1993. From London, Brancaccio also contributed diplomatic and feature coverage 
 					for the radio service of the Christian Science Monitor. During Brancaccio's tenure as host, 
-					Marketplace received the DuPont-Columbia Award (1998) and the George Foster Peabody Award (2001). 
-					He anchored the television newsmagazine, California Connected, that aired on many Californian PBS 
+					Marketplace received the DuPont-
+					Columbia Award (1998) and the 
+					George Foster Peabody Award (2001). 
+					He anchored the television 
+					newsmagazine, California Connected, 
+					that aired on many Californian PBS 
 					stations, from 2002 to 2003.
 				</p>
 				<p>
-					In 2003, Brancaccio left Marketplace to join Bill Moyers on Now. Brancaccio was co-host for over 
-					a year prior to Moyers' retirement at the end of 2004. Among his beats: business innovation and 
-					the economy, politics, human rights, national security, the 
-					environment, health care, and science policy.
+					In 2003, Brancaccio left Marketplace to 
+					join Bill Moyers on Now. Brancaccio 
+					was co-host for over a year prior to 
+					Moyers' retirement at the end of 2004. 
+					Among his beats: business innovation 
+					and the economy, politics, human 
+					rights, national security, the 
+					environment, health care, and science 
+					policy.
 				</p>
 				<p>
-					In 2011, Brancaccio returned to American Public Media's Marketplace as a correspondent covering new 
-					economy issues and tech/innovation. He is now host and senior editor of the popular business program 
-					The Marketplace Morning Report from 6:51 am Eastern to 7:51 am Pacific on public radio stations 
+					In 2011, Brancaccio returned to 
+					American Public Media's Marketplace 
+					as a correspondent covering new 
+					economy issues and tech/innovation. 
+					He is now host and senior editor of the
+					 popular business program The 
+					 Marketplace Morning Report from 6:51 am Eastern to 7:51 am Pacific on public radio stations 
 					nationwide.
 				</p>
 				<p>
