--- a/town-hall-RogerA-cpu-main/town_hall/speakers/c07x_sampson.html
+++ b/town-hall-RogerA-cpu-main/town_hall/speakers/c07x_sampson.html
@@ -51,14 +51,17 @@
 		
 		<aside>
 			<h2>Guest speakers</h2>
-			<h3>October<br><a href="c06x_brancaccio.html">David Brancaccio</a></h3>
-			<img src="../images/brancaccio75.jpg" alt="David Brancaccio photo">
-			<h3>November<br><a href="#">Andrew Ross Sorkin</a></h3>
-			<img src="../images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
-			<h3>January<br><a href="#">Amy Chua</a></h3>
-			<img src="../images/chua75.jpg" alt="Amy Chua photo">
-			<h3>February<br><a href="c07x_sampson.html">Scott Sampson</a></h3>
-			<img src="../images/sampson75.jpg" alt="Scott Sampson photo">
+		  <nav>
+			<nav id="nav_list">
+		<ul>
+			
+		<li><a href="c06x_brancaccio.html" class="arrow"><h3>October<br>David Brancaccio</h3></a></li>
+		<li><a href="#" class="arrow"><h3>November<br>Andrew Ross Sorkin</h3></a></li>
+		<li><a href="#" class="arrow"><h3>January<br>Amy Chua</h3></a></li>
+		<li><a href="c07x_sampson.html" class="arrow"><h3>February<br>Scott Sampson</h3></a></li>
+		
+		</ul>
+			</nav>
 			<h3><a href="../index.html">Return to Home page</a></h3>
 		</aside>
 	</main>
