--- a/town-hall-RogerA-cpu-main/town_hall/speakers/c07x_sampson.html
+++ b/town-hall-RogerA-cpu-main/town_hall/speakers/c07x_sampson.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
 	<meta charset="utf-8">
 	<title>San Joaquin Valley Town Hall</title>
@@ -10,7 +11,7 @@
 
 <body>
 	<header>
-		<img src="../images/town_hall_logo.gif" alt="Town Hall logo" height="80">
+		<img src="../images/town_hall_logo.gif" alt="Town Hall logo" height="80px">
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
