--- a/town-hall-RogerA-cpu-main/town_hall/c12x_employee_table.html
+++ b/town-hall-RogerA-cpu-main/town_hall/c12x_employee_table.html
@@ -8,14 +8,30 @@
 			width: 750px;
 			margin: 0 auto;
 		}
+		figure,figcaption{
+			margin: 0%;
+			padding: 0%;
+		}
+		figure{
+			border: 1px solid black;
+			width: 650px;
+			padding:30px;
+		}
+		figcaption{
+			display: block;
+			font-weight: bold;
+			text-align: center;
+			font-size: 120%;
+			padding-bottom: .25em;
+		}
 		table {
 			border-collapse: collapse;
 			border: 1px solid black;
-			margin: 20px;
+			margin: 10px auto;
 		}
 		thead {
 			background-color: yellow;
-		}
+		} 
 		th, td {
 			border: 1px solid black;
 			padding: .2em 1em .2em .5em;
@@ -28,13 +44,21 @@
 		tbody tr:nth-child(even) td {
 			background-color: yellow;
 		}
+		#white{background-color:white;}
+		#Years{ text-align:right ;}
+		
+		
+		
 	</style>
 </head>
 
 <body>
+<figure>
+	<figcaption>Employee Table </figcaption>
 <table>
 	<thead>
 		<tr>
+	        <th>Department</th>
 			<th>Name</th>
 			<th>E-mail</th>
 			<th class="right">Years of Service</th>
@@ -42,6 +66,7 @@
 	</thead>
 	<tbody>
 		<tr>
+			<td style="vertical-align: text-top;"rowspan="3" >Editorial</td>
 			<td>Joel Murach</td>
 			<td>joelmurach@yahoo.com</td>
 			<td class="right">22</td>
@@ -57,6 +82,7 @@
 			<td class="right">4</td>
 		</tr>
 		<tr>
+			<td id="white" style="vertical-align: text-top; "rowspan="2">Marketing</td>
 			<td>Judy Taylor</td>
 			<td>judy@murach.com</td>
 			<td class="right">39</td>
@@ -67,6 +93,7 @@
 			<td class="right">10</td>
 		</tr>
 		<tr>
+			<td id="white" style="vertical-align: text-top;"rowspan="2">Service</td>
 			<td>Kelly Slivkoff</td>
 			<td>kelly@murach.com</td>
 			<td class="right">25</td>
@@ -75,8 +102,16 @@
 			<td>Juliette Baylon</td>
 			<td>juliette@murach.com</td>
 			<td class="right">1</td>
+			
 		</tr>
 	</tbody>
+	<tfoot>
+		<tr>
+		<td id="Years" colspan="3">Years of Service </td>
+		<td class="right">105 </td>
+		 </tr>
+	</tfoot>
 </table>
+</figure>
 </body>
 </html>
