--- a/town-hall-RogerA-cpu-main/town_hall/c13x_forms.html
+++ b/town-hall-RogerA-cpu-main/town_hall/c13x_forms.html
@@ -40,7 +40,9 @@
 			box-shadow: 2px 2px 0 blue; }
 		#button {
 			margin-left: 9em;
+	
 		}
+		.checkbox{width: auto;}
 	</style>
 </head>
 
@@ -50,12 +52,29 @@
 	
 	<h2>Contact information</h2>
 	<label for="email">Email address:</label>
-    <input type="email" name="email" id="email"><br>
+    <input type="email" name="email" id="email" autofocus required><br>
     <label for="firstname">First name:</label>
-    <input type="text" name="firstname" id="firstname"><br>
+    <input type="text" name="firstname" id="firstname" required><br>
     <label for="lastname">Last name:</label>
-    <input type="text" name="lastname" id="lastname"><br>
+    <input type="text" name="lastname" id="lastname" required><br>
     
+     <h2> Geographic information</h2>
+	 <label for="state"> State:</label>
+	 <input type="state" name="state" id="state" pattern="[A-Za-Z]{2}" placeholder="Two characters"><br>
+	 <label for="zipcode">Zipcode:</label>
+	 <input type="zipcode" name="zipcode" id="zipcode" pattern="\d{5}
+	 "placeholder="Five digits"><br>
+    
+	 <h2>How did you hear about us?</h2>
+	 <label for="Web Search">Web Search:</label>
+	 <input class="checkbox"type="checkbox" name="WebSearch" id="WebSearch"><br>
+	 <label for="Web Search">Facebook:</label>
+	 <input class="checkbox"type="checkbox" name="Facebook" id="facebook"><br>
+	 <label for="Twitter">Twitter:</label>
+	 <input  class="checkbox"type="checkbox" name="Twitter" id="Twitter"><br>
+	 <label for="Email message">Email message:</label>
+	 <input class="checkbox" type="checkbox" name="Email message" id="Email message"><br>
+
     <h2>Thank you for taking our survey!</h2>
     <input type="submit" name="button" id="button" value="Submit">
     <input type="reset" name="reset" id="reset"> 
