--- a/town-hall-RogerA-cpu-main/town_hall/c12x_employee_table.html
+++ b/town-hall-RogerA-cpu-main/town_hall/c12x_employee_table.html
@@ -8,30 +8,14 @@
 			width: 750px;
 			margin: 0 auto;
 		}
-		figure,figcaption{
-			margin: 0%;
-			padding: 0%;
-		}
-		figure{
-			border: 1px solid black;
-			width: 650px;
-			padding:30px;
-		}
-		figcaption{
-			display: block;
-			font-weight: bold;
-			text-align: center;
-			font-size: 120%;
-			padding-bottom: .25em;
-		}
 		table {
 			border-collapse: collapse;
 			border: 1px solid black;
-			margin: 10px auto;
+			margin: 20px;
 		}
-		thead {
+		thead , tfoot {
 			background-color: yellow;
-		} 
+		}
 		th, td {
 			border: 1px solid black;
 			padding: .2em 1em .2em .5em;
@@ -44,21 +28,15 @@
 		tbody tr:nth-child(even) td {
 			background-color: yellow;
 		}
-		#white{background-color:white;}
-		#Years{ text-align:right ;}
-		
-		
-		
+		tbody tr th {vertical-align: top;}
 	</style>
 </head>
 
 <body>
-<figure>
-	<figcaption>Employee Table </figcaption>
 <table>
 	<thead>
 		<tr>
-	        <th>Department</th>
+			<th>Department</th>
 			<th>Name</th>
 			<th>E-mail</th>
 			<th class="right">Years of Service</th>
@@ -66,7 +44,7 @@
 	</thead>
 	<tbody>
 		<tr>
-			<td style="vertical-align: text-top;"rowspan="3" >Editorial</td>
+			<th  class="top" rowspan="3">Editorial</th>
 			<td>Joel Murach</td>
 			<td>joelmurach@yahoo.com</td>
 			<td class="right">22</td>
@@ -77,41 +55,44 @@
 			<td class="right">34</td>
 		</tr>
 		<tr>
+			
 			<td>Zak Ruvalcaba</td>
 			<td>zak@modulemedia.com</td>
 			<td class="right">4</td>
 		</tr>
 		<tr>
-			<td id="white" style="vertical-align: text-top; "rowspan="2">Marketing</td>
+			<th rowspan="2">Marketing</th>
 			<td>Judy Taylor</td>
 			<td>judy@murach.com</td>
 			<td class="right">39</td>
 		</tr>
 		<tr>
+			
 			<td>Bethany Lee</td>
 			<td>bethany@murach.com</td>
 			<td class="right">10</td>
 		</tr>
 		<tr>
-			<td id="white" style="vertical-align: text-top;"rowspan="2">Service</td>
+			<th rowspan="2">Customer Service </th>
 			<td>Kelly Slivkoff</td>
 			<td>kelly@murach.com</td>
 			<td class="right">25</td>
 		</tr>
 		<tr>
+			
 			<td>Juliette Baylon</td>
 			<td>juliette@murach.com</td>
 			<td class="right">1</td>
-			
 		</tr>
 	</tbody>
 	<tfoot>
 		<tr>
-		<td id="Years" colspan="3">Years of Service </td>
-		<td class="right">105 </td>
-		 </tr>
+			<th  class="right" colspan="3">Total of Services </th>
+			<td class="right"> 105</td>
+		</tr>
+
+
 	</tfoot>
 </table>
-</figure>
 </body>
 </html>
