--- a/town_hall/c12x_employee_table.html
+++ b/town_hall/c12x_employee_table.html
@@ -13,7 +13,7 @@
 			border: 1px solid black;
 			margin: 20px;
 		}
-		thead {
+		thead , tfoot {
 			background-color: yellow;
 		}
 		th, td {
@@ -28,6 +28,7 @@
 		tbody tr:nth-child(even) td {
 			background-color: yellow;
 		}
+		tbody tr th {vertical-align: top;}
 	</style>
 </head>
 
@@ -35,6 +36,7 @@
 <table>
 	<thead>
 		<tr>
+			<th>Department</th>
 			<th>Name</th>
 			<th>E-mail</th>
 			<th class="right">Years of Service</th>
@@ -42,6 +44,7 @@
 	</thead>
 	<tbody>
 		<tr>
+			<th  class="top" rowspan="3">Editorial</th>
 			<td>Joel Murach</td>
 			<td>joelmurach@yahoo.com</td>
 			<td class="right">22</td>
@@ -52,31 +55,44 @@
 			<td class="right">34</td>
 		</tr>
 		<tr>
+			
 			<td>Zak Ruvalcaba</td>
 			<td>zak@modulemedia.com</td>
 			<td class="right">4</td>
 		</tr>
 		<tr>
+			<th rowspan="2">Marketing</th>
 			<td>Judy Taylor</td>
 			<td>judy@murach.com</td>
 			<td class="right">39</td>
 		</tr>
 		<tr>
+			
 			<td>Bethany Lee</td>
 			<td>bethany@murach.com</td>
 			<td class="right">10</td>
 		</tr>
 		<tr>
+			<th rowspan="2">Customer Service </th>
 			<td>Kelly Slivkoff</td>
 			<td>kelly@murach.com</td>
 			<td class="right">25</td>
 		</tr>
 		<tr>
+			
 			<td>Juliette Baylon</td>
 			<td>juliette@murach.com</td>
 			<td class="right">1</td>
 		</tr>
 	</tbody>
+	<tfoot>
+		<tr>
+			<th  class="right" colspan="3">Total of Services </th>
+			<td class="right"> 105</td>
+		</tr>
+
+
+	</tfoot>
 </table>
 </body>
 </html>
