--- a/town_hall/speakers/c07x_sampson.html
+++ b/town_hall/speakers/c07x_sampson.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
 	<meta charset="utf-8">
 	<title>San Joaquin Valley Town Hall</title>
@@ -10,7 +11,7 @@
 
 <body>
 	<header>
-		<img src="../images/town_hall_logo.gif" alt="Town Hall logo" height="80">
+		<img src="../images/town_hall_logo.gif" alt="Town Hall logo" height="80px">
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
@@ -41,19 +42,27 @@
 				   also the on-air host for the Discovery Channel's Dinosaur Planet and recently completed a book, 
 				   Dinosaur Odyssey: Fossil Threads in the Web of Life, which is one of the most 
 				   comprehensive surveys of dinosaurs and their worlds to date.</p>
+
+
+				  <p><b>For up to date information on the luncheon</b></p>
+				  <p><a href="mailto:eleanor@townhall.com?cc=georgia@townhall.com&Subject=Scott Sampson luncheon">Send us an email</a>
+				</p>
 			</article>
 		</section>
 		
 		<aside>
 			<h2>Guest speakers</h2>
-			<h3>October<br><a href="c06x_brancaccio.html">David Brancaccio</a></h3>
-			<img src="../images/brancaccio75.jpg" alt="David Brancaccio photo">
-			<h3>November<br><a href="#">Andrew Ross Sorkin</a></h3>
-			<img src="../images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
-			<h3>January<br><a href="#">Amy Chua</a></h3>
-			<img src="../images/chua75.jpg" alt="Amy Chua photo">
-			<h3>February<br><a href="c07x_sampson.html">Scott Sampson</a></h3>
-			<img src="../images/sampson75.jpg" alt="Scott Sampson photo">
+		  <nav>
+			<nav id="nav_list">
+		<ul>
+			
+		<li><a href="c06x_brancaccio.html" class="arrow"><h3>October<br>David Brancaccio</h3></a></li>
+		<li><a href="#" class="arrow"><h3>November<br>Andrew Ross Sorkin</h3></a></li>
+		<li><a href="#" class="arrow"><h3>January<br>Amy Chua</h3></a></li>
+		<li><a href="c07x_sampson.html" class="arrow"><h3>February<br>Scott Sampson</h3></a></li>
+		
+		</ul>
+			</nav>
 			<h3><a href="../index.html">Return to Home page</a></h3>
 		</aside>
 	</main>
