--- a/town_hall/speakers/c11x_sampson.html
+++ b/town_hall/speakers/c11x_sampson.html
@@ -10,14 +10,16 @@
 
 <body>
 	<header>
-		<img src="../images/town_hall_logo.gif" alt="Town Hall logo" height="80">
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
 	<main>
 		<section>
 			<h1>An Image Rollover Using Background Images</h1>
-			<img src="../images/sampson_dinosaur.jpg" alt="Scott Sampson with dinosaur">
+			<p id="image1"></p>
+		
+			
+			
 		</section>
 		
 		<aside>
