--- a/town_hall/speakers/c15x_sampson.html
+++ b/town_hall/speakers/c15x_sampson.html
@@ -48,10 +48,10 @@
 			<h2>Guest speakers</h2>
 			<nav id="nav_list">
 				<ul>
-					<li><a href="speakers/c06x_brancaccio.html"><h3>October<br>David Brancaccio</h3></a></li>
-					<li><a href="#"><h3>November<br>Andrew Ross Sorkin</h3></a></li>
-					<li><a href="#"><h3>January<br>Amy Chua</h3></a></li>
-					<li><a href="speakers/c14x_sampson.html" class="current"><h3>February<br>Scott Sampson</h3></a></li>
+					<li class="arrow"><a href="speakers/c06x_brancaccio.html"><h3>October<br>David Brancaccio</h3></a></li>
+					<li class="arrow"><a href="../"><h3>November<br>Andrew Ross Sorkin</h3></a></li>
+					<li class="arrow"><a href="#"><h3>January<br>Amy Chua</h3></a></li>
+					<li class="arrow"><a href="speakers/c14x_sampson.html"><h3>February<br>Scott Sampson</h3></a></li>
 				</ul>
 			</nav>
 			<h3><a href="#">Return to Home page</a></h3>
