--- a/town_hall/speakers/c18x_sampson.html
+++ b/town_hall/speakers/c18x_sampson.html
@@ -6,6 +6,9 @@
 	<title>San Joaquin Valley Town Hall</title>
 	<link rel="shortcut icon" href="../images/favicon.ico">
 	<link rel="stylesheet" href="../styles/c18x_speaker.css">
+	<script src="http://code.jquery.com/jquery-3.6.0.min.js"></script> 
+	<script src="../javascript/rollover.js"></script>
+
 </head>
 
 <body>
@@ -46,22 +49,22 @@
 		
 		<aside>
 			<h2>Guest speakers</h2>
-			<ul>
+			<ul id="image_rollovers">
 				<li>
 					<h3>October<br><a href="#">David Brancaccio</a></h3>
-					<img src="../images/brancaccio75.jpg" alt="David Brancaccio photo">
+					<img id="../images/Brancaccio_EEC.jpg" src="../images/brancaccio75.jpg" alt="David Brancaccio photo">
 				</li>
 				<li>
 					<h3>November<br><a href="#">Andrew Ross Sorkin</a></h3>
-					<img src="../images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">					
+					<img id="../images/sorkin_desk260.jpg" src="../images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">					
 				</li>
 				<li>
 					<h3>January<br><a href="#">Amy Chua</a></h3>
-					<img src="../images/chua75.jpg" alt="Amy Chua photo">					
+					<img id="../images/chua_220.jpg" src="../images/chua75.jpg" alt="Amy Chua photo">					
 				</li>
 				<li>
 					<h3>February<br><a href="c14x_sampson.html">Scott Sampson</a></h3>
-					<img src="../images/sampson75.jpg" alt="Scott Sampson photo">					
+					<img id="../images/sampson_dinosaur.jpg" src="../images/sampson75.jpg" alt="Scott Sampson photo">					
 				</li>
 			</ul>
 			<h3><a href="#">Return to Home page</a></h3>
